gccida/g2/expand_unop
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_unop/src/optabs.c:2534:19: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  expand_unop( machine_mode mode, optab_0 unoptab, rtx op0, rtx target, int unsignedp) 
                  ^
                  enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_unop/src/optabs.c:2534:38: error: unknown type name 'optab_0'; did you mean 'optab'?
rtx  expand_unop( machine_mode mode, optab_0 unoptab, rtx op0, rtx target, int unsignedp) 
                                     ^~~~~~~
                                     optab
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_unop/src/optabs.h:48:5: note: 'optab' declared here
} * optab;
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_unop/src/optabs.c:2540:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v11; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_unop/src/optabs.c:2550:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v21; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_unop/src/optabs.c:2558:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v29; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_unop/src/optabs.c:2574:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v46; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_unop/src/optabs.c:2594:1: error: must use 'enum' tag to refer to type 'mode_class'
mode_class v67; // [rsp+38h] [rbp-40h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_unop/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_unop/src/optabs.c:2600:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v67 = mode_class_0[mode]; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_unop/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_unop/src/optabs.c:2610:11: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
operand = insn_data_0[( int)insn_code].operand; 
          ^~~~~~~~~~~
          insn_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_unop/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_unop/src/optabs.c:2625:11: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
operand = insn_data_0[( int)insn_code].operand; 
          ^~~~~~~~~~~
          insn_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_unop/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_unop/src/optabs.c:2651:7: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
v17 = insn_data_0[insn_code].genfun( libfunc, v13); 
      ^~~~~~~~~~~
      insn_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_unop/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_unop/src/optabs.c:2651:36: error: called object type '<dependent type>' is not a function or function pointer
v17 = insn_data_0[insn_code].genfun( libfunc, v13); 
                                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_unop/src/optabs.c:2681:33: error: invalid suffix 'xmode' on integer constant
&& unoptab->handlers[*(short *)0xmode].insn_code != CODE_FOR_nothing ) 
                                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_unop/src/optabs.c:2691:31: error: invalid suffix 'orce' on integer constant
v39 = operand_sub*(short *)0xforce( op0, v36, mode); 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_unop/src/optabs.c:2691:7: error: use of undeclared identifier 'operand_sub'
v39 = operand_sub*(short *)0xforce( op0, v36, mode); 
      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_unop/src/optabs.c:2692:31: error: invalid suffix 'xmode' on integer constant
v40 = expand_unop( *(short *)0xmode, unoptab, v39, v38, unsignedp); 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_unop/src/optabs.c:2779:61: error: called object type 'const enum mode_class [59]' is not a function or function pointer
v46 = mode_for_size( 8 * mode_unit_size[mode], ( mode_class)( ( v67 != MODE_COMPLEX_INT) + 1), 0); 
                                               ~~~~~~~~~~~~~^
17 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_unop/src/obj/optabs.o] Error 1
